# push_swap

./: CMakeLists.txt  Makefile  README.md  output.txt
include/: push_swap.h
libft/: Makefile  additional_functions.c  author  ft_atoi.c  ft_atoll.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_printf.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  (+32 more)
libft/ft_printf/: Makefile
libft/ft_printf/include/: ft_printf.h
libft/ft_printf/sources/: adjust_to_flag.c  adjust_to_precision.c  adjust_to_precision_2.c  adjust_to_width.c  ft_putstr_printf.c  get_size.c  get_type.c  get_width.c  parse_binary.c  parse_char.c  parse_float_2.c  parse_hexodecimal.c  parse_octal.c  parse_pointer.c  print_color.c
libft/include/: ft_printf.h  libft.h
sources/: algorithm.c  algorithm2.c  algorithm3.c  algorithm4.c  algorithm5.c  algorithm6.c  algorithm7.c  allocate_struct.c  checker.c  create_node2.c  display_output.c  display_stacks.c  find_best_sequence.c  find_best_solution.c  free_node.c  ft_check_fd.c  ft_solve.c  increase_buffer.c  instructions.c  instructions_output.c  parse_stack.c  parse_string.c  print_error.c  push_swap.c  push_to_scnd_stack.c  put_index.c  put_reverses.c  sort_first_stack.c  sort_stacks.c  what_to_push.c
