cmake_minimum_required(VERSION 3.15)
project(push_swap_owngit C)

set(CMAKE_C_STANDARD 11)

include_directories(include)
include_directories(libft/include)

add_executable(push_swap_owngit
    include/push_swap.h
    libft/include/ft_printf.h
    libft/include/libft.h
    libft/additional_functions.c
    libft/adjust_to_flag.c
    libft/adjust_to_precision.c
    libft/adjust_to_precision_2.c
    libft/adjust_to_width.c
    libft/ft_atoi.c
    libft/ft_atoll.c
    libft/ft_bzero.c
    libft/ft_isalnum.c
    libft/ft_isalpha.c
    libft/ft_isascii.c
    libft/ft_isdigit.c
    libft/ft_isprint.c
    libft/ft_itoa.c
    libft/ft_lstadd.c
    libft/ft_lstdel.c
    libft/ft_lstdelone.c
    libft/ft_lstiter.c
    libft/ft_lstmap.c
    libft/ft_lstnew.c
    libft/ft_memalloc.c
    libft/ft_memccpy.c
    libft/ft_memchr.c
    libft/ft_memcmp.c
    libft/ft_memcpy.c
    libft/ft_memdel.c
    libft/ft_memmove.c
    libft/ft_memset.c
    libft/ft_printf.c
    libft/ft_putchar.c
    libft/ft_putchar_fd.c
    libft/ft_putendl.c
    libft/ft_putendl_fd.c
    libft/ft_putnbr.c
    libft/ft_putnbr_fd.c
    libft/ft_putstr.c
    libft/ft_putstr_fd.c
    libft/ft_putstr_printf.c
    libft/ft_strcat.c
    libft/ft_strchr.c
    libft/ft_strclr.c
    libft/ft_strcmp.c
    libft/ft_strcpy.c
    libft/ft_strdel.c
    libft/ft_strdup.c
    libft/ft_strequ.c
    libft/ft_striter.c
    libft/ft_striteri.c
    libft/ft_strjoin.c
    libft/ft_strlcat.c
    libft/ft_strlen.c
    libft/ft_strmap.c
    libft/ft_strmapi.c
    libft/ft_strncat.c
    libft/ft_strncmp.c
    libft/ft_strncpy.c
    libft/ft_strnequ.c
    libft/ft_strnew.c
    libft/ft_strnstr.c
    libft/ft_strrchr.c
    libft/ft_strsplit.c
    libft/ft_strstr.c
    libft/ft_strsub.c
    libft/ft_strtrim.c
    libft/ft_tolower.c
    libft/ft_toupper.c
    libft/get_flag.c
    libft/get_precision.c
    libft/get_size.c
    libft/get_type.c
    libft/get_width.c
    libft/parse_binary.c
    libft/parse_char.c
    libft/parse_decimal.c
    libft/parse_float.c
    libft/parse_float_2.c
    libft/parse_hexodecimal.c
    libft/parse_octal.c
    libft/parse_percent.c
    libft/parse_pointer.c
    libft/parse_string.c
    libft/parse_udecimal.c
    libft/parse_unicode.c
    libft/print_color.c
    sources/allocate_struct.c
#    sources/checker.c
    sources/create_node2.c
    sources/display_output.c
    sources/display_stacks.c
    sources/find_best_sequence.c
    sources/free_node.c
    sources/ft_check_fd.c
    sources/ft_solve.c
    sources/increase_buffer.c
    sources/instructions.c
    sources/instructions_output.c
    sources/parse_stack.c
    sources/parse_string.c
    sources/print_error.c
    sources/push_swap.c
    sources/push_to_scnd_stack.c
    sources/put_index.c
    sources/put_reverses.c
    sources/sort_first_stack.c
    sources/sort_stacks.c
    sources/what_to_push.c sources/find_best_solution.c)
